install npm modules for rot-js, webpack, babel-core, babel-preset-env, and babel-loader; add bundle.js and node_modules to ignore file; configure webpack to use babel and to compile js/game.js to bundle.js; update project setup doc to include these steps

--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
   "bugs": {
     "url": "https://github.com/cwarren/weedstrikeroguelike/issues"
   },
-  "homepage": "https://github.com/cwarren/weedstrikeroguelike#readme"
+  "homepage": "https://github.com/cwarren/weedstrikeroguelike#readme",
+  "dependencies": {
+    "rot-js": "^0.6.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^3.10.0"
+  }
 }
