add build and watch scripts for npm; update project_setup to include that script set up, as well as basic file structure for the project

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress -p",
+    "watch": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
