set up build tools- npm, webpack, babel

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress -p",
+    "build": "webpack --progress",
     "watch": "webpack --progress --watch"
   },
   "repository": {
@@ -26,10 +26,11 @@
   },
   "homepage": "https://github.com/cwarren/weedstrikeroguelike#readme",
   "dependencies": {
-    "rot-js": "^0.6.5"
+    "rot-js": "^0.6.5",
+    "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "webpack": "^3.10.0"
